crates/lash/tests/ui/tool_state_generation_is_sealed.stderr
error[E0624]: method `with_generation` is private
 --> tests/ui/tool_state_generation_is_sealed.rs:2:50
  |
2 |     let forged = lash_core::ToolState::default().with_generation(9_999);
  |                                                  ^^^^^^^^^^^^^^^ private method
  |
 ::: $WORKSPACE/crates/lash-core/src/tool_registry/state.rs
  |
  |     pub(crate) fn with_generation(mut self, generation: u64) -> Self {
  |     ---------------------------------------------------------------- private method defined here
