crates/lash/tests/ui/tool_state_generation_is_sealed.rs
fn main() {
    let forged = lash_core::ToolState::default().with_generation(9_999);
    let _ = forged;
}
